infra/terraform/network.tf
data "aws_vpc" "default" {
  default = true
}

data "aws_subnets" "default" {
  filter {
    name   = "vpc-id"
    values = [data.aws_vpc.default.id]
  }
}

resource "aws_db_subnet_group" "main" {
  name       = "sentinel-db-subnets"
  subnet_ids = data.aws_subnets.default.ids
}

resource "aws_security_group" "app" {
  name   = "sentinel-app-sg"
  vpc_id = data.aws_vpc.default.id

  ingress {
    description = "Allow web traffic to the app"
    from_port   = 8000
    to_port     = 8000
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  egress {
    description = "Allow the app to reach out anywhere (e.g. to AWS APIs)"
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }
}

resource "aws_security_group" "db" {
  name   = "sentinel-db-sg"
  vpc_id = data.aws_vpc.default.id

  ingress {
    description     = "Allow Postgres access only from the app"
    from_port       = 5432
    to_port         = 5432
    protocol        = "tcp"
    security_groups = [aws_security_group.app.id]
  }

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }
}
